﻿RELEASE HISTORY

29/07/2014 1.00 beta rev 403
	- Some optimizations to the X10, ZWave and SerialPort driver libraries
	- Other minor fixes

26/07/2014 1.00 beta rev 402
	- Added "Sunrise Colors Scenario" sample script for Philips Hue lights
	- Added module settings popup to the control page
	- Fixed occasional crash in shutdown/restart process
	- Added "Raspberry Pi Camera" resolution modes to camera driver (up to 5Mpx and 90fps)
	- Fixed bug in Interconnections (decimal fields serialization issue in SignalEvent)
	- Fixed bug in web service file caching

13/07/2014 1.00 beta rev 400
	- Updated MQTT Network app. Now with virtual modules and remote module control

13/07/2014 1.00 beta rev 398
	- added device/resolution/fps parameters to camera driver
	- added gdlib3 support to CameraCaptureV4L wrapper
	- added MQTT app (Automation/Interconnections)
	- added MQTT support to NetHelper class
	- added unhalded exceptions trapping to main program

09/07/2014 1.00 beta rev 395
	- fixed a bug in Philips Hue and Fibaro RGBW apps

08/07/2014 1.00 beta rev 394
	- adapted UPnP media widgets to the new UI
	- added Events History enable/disable in Maintenance section
	- added log file download in Maintenance section
	- added Web Caching enable/disable in Maintenance section
	- updated Raspberry#.IO library
	- added service Restart button in Maintenance section
	- Macro Recording now records UPnP commands as well
	- other minor fixes

04/07/2014 1.00 beta rev 392
	- Some fixes to the debian package builder
	- Disabled web file caching due to suspect bug
	- Added preliminary Z-Wave Thermostat support (mtanana)

03/07/2014 1.00 beta rev 390
	- Added menu for selecting current control group in Control page
	- More enhancements and fixes to new ui

02/07/2014 1.00 beta rev 388
	- Some more fixes to new UI: custom font, re-enabled themes, fixed popup event re-positioning on scroll, other minor fixes

30/06/2014 1.00 beta rev 387
	- Upgraded to JQM 1.4.2. Main UI rework.
