@@ -1,8 +1,9 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="../HomeGenie/release_info.xml">
+  <MonoDevelop.Ide.Workbench ActiveDocument="../HISTORY.TXT">
     <Files>
-      <File FileName="../HomeGenie/release_info.xml" Line="1" Column="1" />
+      <File FileName="../HomeGenie/release_info.xml" Line="2" Column="1" />
+      <File FileName="../HISTORY.TXT" Line="5" Column="12" />
     </Files>
   </MonoDevelop.Ide.Workbench>
   <MonoDevelop.Ide.DebuggingService.Breakpoints>
